--- a/New-Car-Loan/src/app/app.html
+++ b/New-Car-Loan/src/app/app.html
@@ -1,3 +1,5 @@
 <app-navbar></app-navbar>
-<app-tracker></app-tracker>
-<router-outlet></router-outlet>
+<div class="app-body">
+	<app-tracker></app-tracker>
+	<router-outlet></router-outlet>
+</div>
