--- a/New-Car-Loan/src/app/shared/components/navbar/navbar.css
+++ b/New-Car-Loan/src/app/shared/components/navbar/navbar.css
@@ -5,7 +5,7 @@
   /* Bajaj Finserv blue */
   padding: 16px 0;
   position: relative;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
   min-height: 56px;
 }
 
