--- a/New-Car-Loan/src/app/features/vehicle-details/components/vehicle-form/vehicle-form.html
+++ b/New-Car-Loan/src/app/features/vehicle-details/components/vehicle-form/vehicle-form.html
@@ -1,5 +1,5 @@
 <div *ngIf="!isLoading" class="page-container">
-    <app-tracker></app-tracker>
+    <!-- <app-tracker></app-tracker> -->
     <div class="vehicle-details-page">
         <div class="vehicle-details-content" aria-labelledby="vehicle-details-heading">
             <header class="vehicle-details-content__header">
