--- a/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.html
+++ b/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.html
@@ -13,7 +13,7 @@
   <div class="form-field">
     <label for="pan-input">Full Name on PAN Card <span class="required">*</span></label>
     <input type="text" class="form-control" id="pan-input" placeholder="Enter full name" [(ngModel)]="fullName"
-      (input)="onFullNameInput($event)" [disabled]="!!fullNameFromDrawer">
+      (input)="onFullNameInput($event); setTyping($event)" (blur)="onBlurRemoveTyping($event)" [disabled]="!!fullNameFromDrawer">
     @if (showErrors && !fullName.trim()) {
     <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please enter your full name</span></div>
     }
@@ -43,7 +43,7 @@
   <div class="form-field">
     <label for="dob-input">Date of Birth <span class="required">*</span></label>
     <input type="text" class="form-control" id="dob-input" placeholder="dd/mm/yyyy" [(ngModel)]="dob" maxlength="10"
-      pattern="\d{2}/\d{2}/\d{4}" (input)="onDobInput($event)">
+      pattern="\d{2}/\d{2}/\d{4}" (input)="onDobInput($event); setTyping($event)" (blur)="onBlurRemoveTyping($event)">
 
     @if (showErrors && !dob) {
     <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please enter your date of birth</span>
@@ -59,7 +59,7 @@
     <label for="pan-number-input">PAN Card Number <span class="required">*</span>
       <img src="/Vector copy.svg" alt="PAN info" class="pan-info-icon" (click)="openDrawerForPan()"/></label>
     <input type="text" class="form-control" id="pan-number-input" placeholder="Enter 10-character alphanumeric PAN"
-      [(ngModel)]="pan" (input)="onPanInput($event)" maxlength="10">
+      [(ngModel)]="pan" (input)="onPanInput($event); setTyping($event)" (blur)="onBlurRemoveTyping($event)" maxlength="10">
     @if (showErrors && !isPanValid()) {
     <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Invalid PAN card number. Please enter a
         valid 10-character alphanumeric PAN</span></div>
@@ -88,7 +88,7 @@
     <div class="salary-field">
       <label for="salary-input">Net Monthly Salary <span class="required">*</span></label>
       <input id="salary-input" type="text" class="form-control" placeholder="Enter monthly take-home salary"
-        [(ngModel)]="monthlySalary" (input)="onSalaryInput($event)">
+        [(ngModel)]="monthlySalaryDisplay" (input)="onSalaryInput($event); setTyping($event)" (blur)="onBlurRemoveTyping($event)">
       @if (showErrors && !isSalaryValid()) {
       <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please enter salary between 15000 to
           75000</span></div>
@@ -101,11 +101,7 @@
         <img src="/Vector copy.svg" alt="GST info" class="pan-info-icon" (click)="openDrawerForGstin()" />
       </label>
       <input id="gstin-input" type="text" class="form-control" placeholder="Enter your GSTIN" [(ngModel)]="gstin"
-        (input)="onGstInput($event)">
-      @if (showErrors && !isGstValid()) {
-      <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Invalid GSTIN card number. Please
-          enter a valid 15-character alphanumeric GSTIN</span></div>
-      }
+        (input)="onGstInput($event); setTyping($event)" (blur)="onBlurRemoveTyping($event)">
     </div>
     }
   </div>
@@ -129,7 +125,7 @@
   <div class="form-field">
     <label for="pincode-input">Current Residential PIN Code <span class="required">*</span></label>
     <input type="text" class="form-control" id="pincode-input" placeholder="Enter 6-digit current residential PIN code"
-      [(ngModel)]="pincode" (input)="onPincodeInput($event)" maxlength="6">
+      [(ngModel)]="pincode" (input)="onPincodeInput($event); setTyping($event)" (blur)="onBlurRemoveTyping($event)" maxlength="6">
     @if (showErrors && !isPincodeValidLocal()) {
     <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please enter a valid 6-digit PIN
         code</span></div>
@@ -197,8 +193,8 @@
 
 <!-- SAVE TO CART Modal (desktop) -->
 @if (showSaveCartModal) {
-<div class="save-cart-overlay">
-  <div class="save-cart-modal">
+<div class="save-cart-overlay" (click)="closeSaveCartModal()">
+  <div class="save-cart-modal" (click)="$event.stopPropagation()">
     <div class="save-cart-close"><img src="/Vector copy 2.svg" alt="Close" (click)="closeSaveCartModal()"/></div>
     <div class="save-cart-content">
       <h3 class="save-cart-title">Details saved successfully</h3>
@@ -218,8 +214,8 @@
 
 <!-- SAVE TO CART Drawer (mobile) -->
 @if (showSaveCartDrawer) {
-<div class="save-cart-drawer">
-  <div class="save-cart-drawer-content">
+<div class="save-cart-drawer" (click)="closeSaveCartDrawer()">
+  <div class="save-cart-drawer-content" (click)="$event.stopPropagation()">
     <!-- Row 1: Close button (aligned right) -->
     <div class="row row-close">
       <button class="close-icon" aria-label="Close" (click)="closeSaveCartDrawer()">
@@ -263,8 +259,8 @@
 
 <!-- Drawer for GSTIN info -->
 @if (isGstinDrawerOpen) {
-<div class="gstin-drawer">
-  <div class="drawer-content">
+<div class="gstin-drawer" (click)="closeGstinDrawer()">
+  <div class="drawer-content" (click)="$event.stopPropagation()">
     <div class="drawer-row-1">
       <span class="close-button">
         <img src="/Vector copy 2.svg" alt="Close" (click)="closeGstinDrawer()" />
@@ -280,8 +276,8 @@
 }
 
 @if (isPanDrawerOpen) {
-<div class="gstin-drawer">
-  <div class="pan-drawer-content">
+<div class="gstin-drawer" (click)="closePanDrawer()">
+  <div class="pan-drawer-content" (click)="$event.stopPropagation()">
     <div class="drawer-row-1">
       <span class="close-button"></span>
         <img src="/Vector copy 2.svg" alt="Close" (click)="closePanDrawer()" />
